client/src/styles/main.css
:root {
  --scroll-size: 8px;
}

:root:has(.dark) {
  --bg-primary-color: #151515;
  --text-primary-color: #ffffff;
  --scroll-color: #434343;
}

:root:has(.light) {
  --bg-primary-color: #fff;
  --text-primary-color: #000;
  --scroll-color: #bfbfbf;
}

:root::-webkit-scrollbar,
textarea::-webkit-scrollbar {
  width: var(--scroll-size);
  height: var(--scroll-size);
}

:root::-webkit-scrollbar-thumb,
textarea::-webkit-scrollbar-thumb {
  border-radius: calc(var(--scroll-size) / 2);
}

:root::-webkit-scrollbar-track,
textarea::-webkit-scrollbar-track {
  margin: calc(var(--scroll-size) / 2);
}

textarea::-webkit-resizer {
  border-width: 3px;
  border-style: solid;
  border-color: transparent var(--scroll-color) var(--scroll-color) transparent;
  border-radius: 0 0 4px 0;
  background: var(--bg-primary-color);
}

.dark .header-logo,
.dark .login-image {
  filter: invert(1);
}

/* Workaround for the incorrect background color when autofill suggestions are active*/
input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  -webkit-background-clip: text;
  -webkit-text-fill-color: var(--text-primary-color);
  transition: background-color 100s ease-in-out 0s;
}

html,
body,
#root {
  height: 100%;
  background: var(--bg-primary-color);
  color: var(--text-primary-color);
}

.rs-link {
  color: #fff;
  display: inline-block;
  padding: 1px 2px;
}

.ant-layout-sider-dark h4 {
  color: rgba(255, 255, 255, 0.6);
  background: #07223b;
  white-space: nowrap;
}

.ant-layout-sider-dark h4 span {
  text-transform: uppercase;
  font-size: 16px;
  line-height: 30px;
  padding: 0 0 0 24px;
}

.ant-layout-sider-collapsed h4 span {
  display: none;
}

.ant-drawer-content-wrapper {
  max-width: 85%;
}

.footer {
  padding: 16px;
}

.rs-table-row-disabled {
  opacity: 0.25;
}

.rs-table-row-cols-disabled td:not(.rs-table-row-cols-disabled td:last-of-type) {
  opacity: 0.25;
  border-bottom: 1px solid #cacaca;
}

.ant-table-tbody .rs-table-row-cols-disabled:hover td:last-of-type {
  background: rgba(250, 250, 250, 0.25);
}

div.ant-table-column-sorters {
  padding: 0;
}

span.ant-table-filter-column-title {
  padding-top: 8px;
  padding-bottom: 8px;
}

span.ant-radio + * {
  display: inline-block;
  white-space: normal;
  vertical-align: top;
}

thead.ant-table-thead > tr > th {
  font-size: 12px;
}

.crosscheck-submitted-link:focus {
  text-decoration: underline;
}

/* .rc-virtual-list-scrollbar {
  display: block !important;
} */

/* table-row-* are used for Schedule Table view - Split by week feature */
.table-row-current {
  background-color: #2f8e0017;
}

.table-row-current-day {
  background-color: #2f8e002d;
}

.table-row-odd {
  background-color: #f8f8f8;
}

.table-row-done {
  background-color: #f6ffed;
}

@media print {
  .no-print {
    display: none !important;
  }

  .print-black {
    color: black !important;
    background-color: white !important;
  }

  .print-no-padding {
    padding: 0 !important;
    margin: 0 !important;
  }
}

/* CV */

.cv-card-section {
  break-inside: avoid;
}

.cv-sidebar {
  padding: 16px;
  background-color: #000;
  color: #fff;
  break-inside: avoid;
}

@media print {
  .cv-sidebar {
    background-color: #fff;
    color: #000;
  }
}

